--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^6.0.0",
     "mongoose": "^7.4.3",
     "validator": "^13.11.0"
   }
