--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.3",
+    "socket.io": "^4.7.2",
     "validator": "^13.11.0"
   }
 }
